# ethopy_control

./: .gitignore  LICENSE  README.md  app.py  app_setup.py  main.py  mkdocs.yml  models.py  pyproject.toml
.github/workflows/: docs.yml
docs/: activity_monitor.md  custom_event_types.md  environment-variables.md  index.md  monitoring.md  setup.md  user_management.md
docs/api/: endpoints.md  models.md
docs/development/: contributing.md  project_structure.md  testing.md
real_time_plot/: get_activity.py  real_time_events.py
static/js/: table.js
templates/: activity_monitor.html  base.html  index.html  login.html  tasks.html
templates/admin/: add_user.html  edit_user.html  users.html
tests/: conftest.py  test_api.py  test_models.py
utils/: __init__.py  config.py  init_db.py  setup_env.py
